--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
 /* --- LOGIKA 3 JENIS SHADOW --- */
 /* Wrapper untuk menumpuk semua shadow */
 .shadow-wrapper {
-    position: relative;
+    position: absolute;
     top: 50%; left: 50%;
     transform: translate(-50%, -50%);
     width: 960px; height: 680px; /* Area shadow */
@@ -66,7 +66,7 @@ body {
 
 /* Style umum untuk ketiga gambar shadow */
 .shadow-item {
-    position: relative;
+    position: absolute;
     top: 50%; left: 50%;
     transform: translate(-50%, -50%);
     width: 100%; height: 100%; /* Mengikuti wrapper */
