--- a/style.css
+++ b/style.css
@@ -68,6 +68,8 @@ body {
 .shadow-item {
     position: absolute;
     top: 50%; left: 50%;
+    margin-left: 10vh;
+    margin-right: 10vh;
     transform: translate(-50%, -50%);
     width: 100%; height: 100%; /* Mengikuti wrapper */
     object-fit: contain; /* Agar rasio gambar shadow terjaga */
