--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ body {
     position: absolute;
     top: 50%; left: 50%;
     margin-left: 15vh;
+    margin-right: 45vh;
     transform: translate(-50%, -50%);
     width: 100%; height: 100%; /* Mengikuti wrapper */
     object-fit: contain; /* Agar rasio gambar shadow terjaga */
