--- a/style.css
+++ b/style.css
@@ -59,9 +59,10 @@ body {
     position: absolute;
     top: 50%; left: 50%;
     transform: translate(-50%, -50%);
-    width: 480px; height: 680px; /* Area shadow */
+    width: 960px; height: 680px; /* Area shadow */
     z-index: -1;
     pointer-events: none;
+    transition: opacity 1s ease-in-out; /* Efek transisi halus */
 }
 
 /* Style umum untuk ketiga gambar shadow */
