--- a/style.css
+++ b/style.css
@@ -58,11 +58,12 @@ body {
 .shadow-wrapper {
     position: absolute;
     top: 50%; left: 50%;
+    padding-left: 15vh;
+    padding-right: 15vh;
     transform: translate(-50%, -50%);
     width: 960px; height: 680px; /* Area shadow */
     z-index: -1;
     pointer-events: none;
-    transition: opacity 1s ease-in-out; /* Efek transisi halus */
 }
 
 /* Style umum untuk ketiga gambar shadow */
@@ -73,13 +74,13 @@ body {
     width: 100%; height: 100%; /* Mengikuti wrapper */
     object-fit: contain; /* Agar rasio gambar shadow terjaga */
     opacity: 0; /* Semua sembunyi dulu */
-    transition: opacity 0ms ease-in-out; /* Efek transisi halus */
+    transition: opacity 0s ease-in-out; /* Efek transisi halus */
 }
 
 /* Class aktif untuk memunculkan shadow */
 .shadow-item.active {
     opacity: 1;
-    transition: opacity 0.5s ease-in-out;
+    transition: opacity 1s ease-in-out;
 }
 
 /* --- FLIPBOOK --- */
