--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
 /* --- LOGIKA 3 JENIS SHADOW --- */
 /* Wrapper untuk menumpuk semua shadow */
 .shadow-wrapper {
-    position: absolute;
+    position: relative;
     top: 50%; left: 50%;
     margin-left: 15vh
     transform: translate(-50%, -50%);
@@ -67,7 +67,7 @@ body {
 
 /* Style umum untuk ketiga gambar shadow */
 .shadow-item {
-    position: absolute;
+    position: relative;
     top: 50%; left: 50%;
     transform: translate(-50%, -50%);
     width: 100%; height: 100%; /* Mengikuti wrapper */
