--- a/style.css
+++ b/style.css
@@ -58,7 +58,6 @@ body {
 .shadow-wrapper {
     position: absolute;
     top: 50%; left: 50%;
-    margin-left: 15vh;
     transform: translate(-50%, -50%);
     width: 960px; height: 680px; /* Area shadow */
     z-index: -1;
@@ -75,12 +74,30 @@ body {
     opacity: 0; /* Semua sembunyi dulu */
     transition: opacity 0.6s ease-in-out; /* Efek transisi halus */
 }
+.shadow-front {
+    width: 480px;
+    height: 680px;
+    
+    top: 50%;
+    left: 62%;      
+    
+    transform: translate(-50%, -50%);
+}
+.shadow-flip {
+    width: 480px;
+    height: 680px;
+    
+    top: 50%;
+    left: 50%;      
+    
+    transform: translate(-50%, -50%);
+}
 .shadow-back {
     width: 480px;
     height: 680px;
     
     top: 50%;
-    left: 22%;      /* 25% artinya geser ke KIRI */
+    left: 22%;      
     
     transform: translate(-50%, -50%);
 }
