--- a/style.css
+++ b/style.css
@@ -124,8 +124,8 @@ body {
 
 /* --- CONTROLS --- */
 .controls {
-    background: rgba(0, 0, 0, 0.7); color: white;
-    position: fixed; bottom: 20px; left: 50%;
+    background: rgba(0, 0, 0, 0.391); color: white;
+    position: top; bottom: 20px; left: 50%;
     transform: translateX(-50%); padding: 8px 20px;
     border-radius: 50px; display: flex; gap: 15px; z-index: 999;
 }
