--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: flex-start; /* Agar nempel di ATAS, bukan di tengah vertikal */
-    padding-top: 40px;       /* Beri jarak sedikit dari atap agar tidak terlalu mepet */
+    padding-top: 40px;
+    }       /* Beri jarak sedikit dari atap agar tidak terlalu mepet */
 
 /* --- LOADER --- */
 #loader-overlay {
