--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@ body {
 /* --- VIEWPORT --- */
 .viewport {
     width: 100%; height: 100%;
-    display: flex; justify-content: center; align-items: center;
+    display: flex; justify-content: center; 
+    align-items: flex-start;
     position: relative;
 }
 
