--- a/style.css
+++ b/style.css
@@ -15,9 +15,8 @@ body {
     width: 100vw;
     display: flex;
     justify-content: center;
-    align-items: flex-start; /* Agar nempel di ATAS, bukan di tengah vertikal */
-    padding-top: 40px;
-    }       /* Beri jarak sedikit dari atap agar tidak terlalu mepet */
+    align-items: flex-start;
+}
 
 /* --- LOADER --- */
 #loader-overlay {
@@ -42,8 +41,7 @@ body {
 /* --- VIEWPORT --- */
 .viewport {
     width: 100%; height: 100%;
-    display: flex; justify-content: center; 
-    align-items: flex-start;
+    display: flex; justify-content: center; align-items: center;
     position: relative;
 }
 
